# mcp-server-demo

./: .env-example  README.md  pyproject.toml  requirements.txt  server.py
