[project]
name = "mcp-server-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.11.0.post1",
    "fastapi>=0.116.1",
    "fastmcp>=2.11.2",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.28",
    "langchain-text-splitters>=0.3.9",
    "mcp[cli]>=1.12.2",
    "openai>=1.98.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
]
